--- a/Bogholderen/src/app/hours/registrate-hours.component.html
+++ b/Bogholderen/src/app/hours/registrate-hours.component.html
@@ -1,11 +1,3 @@
-<div class="d-flex flex-row col-sm-12 " id="hoursRow">
-  <div class="col-sm-2">
-    <p class="float-start">{{ 'hours.totalhours' | translate}}:  {{hoursTotal}}</p>
-    <p class="float-start">{{ 'hours.estimatedhours' | translate}}: {{hoursEst}}</p>
-    <p class="float-start">{{ 'hours.remaininghours' | translate}}: {{hoursEst - hoursTotal}}</p>
-  </div>
-</div>
-
 <div class="d-flex flex-row">
   <div class="p-2 col-md-2">
     <button type="button" (click)="ToggleRegistration()" class="btn btn-primary">
@@ -17,93 +9,120 @@
   </div>
 </div>
 
-  <div *ngIf="!toggleRegistration">
-    <form [formGroup]="registrateHoursForm" (ngSubmit)="onSubmit()">
-      <div>
-        <div class="d-flex flex-row">
-          <div class="p-2 col-md-2">
-            <input id="HoursToRegistrate" type="text" formControlName="HoursToRegistrate" class="form-control" placeholder="{{ 'hours.hourstoregistrate' | translate}}">
-            <div *ngIf="hoursToRegistrate?.invalid && (hoursToRegistrate?.dirty || hoursToRegistrate?.touched)" class="alert alert-danger">
-              <div *ngIf="hoursToRegistrate?.errors">
-                {{ 'hours.hourstoregistrate' | translate}} {{ 'shared.required' | translate}}
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex flex-row">
-          <div class="p-2 col-md-2">
-            <label for="RegistrationDate">{{ 'projects.startdate' | translate}}</label>
-            <input id="RegistrationDate" type="Date" formControlName="RegistrationDate" class="form-control" placeholder="{{ 'projects.registrationdate' | translate}}">
-            <div *ngIf="registrationDate?.invalid && (registrationDate?.dirty || registrationDate?.touched)" class="alert alert-danger">
-              <div *ngIf="registrationDate?.errors">
-                {{ 'hours.registrationdate' | translate}} {{ 'shared.required' | translate}}
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex flex-row">
-          <div class="p-2 col-md-2">
-            <textarea id="Note" type="text" formControlName="Note" class="form-control" rows="4" cols="50" placeholder="{{ 'projects.note' | translate}}">
-          </textarea>
-            <div *ngIf="note?.invalid && (note?.dirty || note?.touched)" class="alert alert-danger">
-              <div *ngIf="note?.errors">
-                {{ 'projects.note' | translate}} {{ 'shared.required' | translate}}
-              </div>
-            </div>
-          </div>
-        </div>
+<br>
 
-        <br />
-        <div class="d-flex flex-row">
-          <div class="p-2 col-md-2">
-            <button type="submit" [disabled]="registrateHoursForm.invalid" class="btn btn-primary">Submit</button>
+<div *ngIf="!toggleRegistration">
+  <form [formGroup]="registrateHoursForm" (ngSubmit)="onSubmit()">
+    <div>
+      <div class="d-flex flex-row">
+        <div class="p-2 col-md-2">
+          <input id="HoursToRegistrate" type="text" formControlName="HoursToRegistrate" class="form-control" placeholder="{{ 'hours.hourstoregistrate' | translate}}">
+          <div *ngIf="hoursToRegistrate?.invalid && (hoursToRegistrate?.dirty || hoursToRegistrate?.touched)" class="alert alert-danger">
+            <div *ngIf="hoursToRegistrate?.errors">
+              {{ 'hours.hourstoregistrate' | translate}} {{ 'shared.required' | translate}}
+            </div>
           </div>
         </div>
       </div>
-      <br><br>
-    </form>
-  </div>
+      <div class="d-flex flex-row">
+        <div class="p-2 col-md-2">
+          <label for="RegistrationDate">{{ 'projects.startdate' | translate}}</label>
+          <input id="RegistrationDate" type="Date" formControlName="RegistrationDate" class="form-control" placeholder="{{ 'projects.registrationdate' | translate}}">
+          <div *ngIf="registrationDate?.invalid && (registrationDate?.dirty || registrationDate?.touched)" class="alert alert-danger">
+            <div *ngIf="registrationDate?.errors">
+              {{ 'hours.registrationdate' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex flex-row">
+        <div class="p-2 col-md-2">
+          <textarea id="Note" type="text" formControlName="Note" class="form-control" rows="4" cols="50" placeholder="{{ 'projects.note' | translate}}">
+          </textarea>
+          <div *ngIf="note?.invalid && (note?.dirty || note?.touched)" class="alert alert-danger">
+            <div *ngIf="note?.errors">
+              {{ 'projects.note' | translate}} {{ 'shared.required' | translate}}
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <div>
-    <div class="container">
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>{{ 'hours.hourstoregistrate' | translate}}</th>
-            <th>{{ 'hours.registrationdate' | translate}}</th>
-            <th>{{ 'projects.note' | translate}}</th>
-            <th>{{ 'customers.companyname' | translate}}</th>
-            <th>{{ 'employees.name' | translate}}</th>
-            <th>{{ 'projects.projectname' | translate}}</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let hours of hours;">
-            <td>{{hours.id}}</td>
-            <td>{{hours.hoursToRegistrate}}</td>
-            <td>{{hours.registrationDate}}</td>
-            <td>{{hours.note}}</td>
-            <td>{{hours.companyName}}</td>
-            <td>{{hours.employeeName}}</td>
-            <td>{{hours.projectName}}</td>
-            <td>
-              <a href="#" [routerLink]="['/update-hours', hours.id]" class="btn btn-primary">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-                  <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
-                </svg>
-              </a>
-              <button type="button" (click)="DeleteRegistration(hours.id)" class="btn btn-danger">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
-                  <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
-                </svg>
-              </button>
-            </td>
-
-          </tr>
-        </tbody>
-      </table>
+      <br />
+      <div class="d-flex flex-row">
+        <div class="p-2 col-md-2">
+          <button type="submit" [disabled]="registrateHoursForm.invalid" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
     </div>
+    <br><br>
+  </form>
+</div>
 
+<div>
+  <div class="container">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>{{ 'hours.estimatedhours' | translate}}</th>
+          <th>{{ 'hours.totalhours' | translate}}</th>
+          <th>{{ 'hours.remaininghours' | translate}}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{hoursEst}}</td>
+          <td>{{hoursTotal}}</td>
+          <td>{{hoursEst - hoursTotal}}</td>
 
+        </tr>
+      </tbody>
+    </table>
   </div>
+</div>
+
+<br>
+<br>
+
+<div>
+  <div class="container">
+    <table class="table table-striped table-bordered">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>{{ 'hours.hourstoregistrate' | translate}}</th>
+          <th>{{ 'hours.registrationdate' | translate}}</th>
+          <th>{{ 'projects.note' | translate}}</th>
+          <th>{{ 'customers.companyname' | translate}}</th>
+          <th>{{ 'employees.name' | translate}}</th>
+          <th>{{ 'projects.projectname' | translate}}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let hours of hours;">
+          <td>{{hours.id}}</td>
+          <td>{{hours.hoursToRegistrate}}</td>
+          <td>{{hours.registrationDate}}</td>
+          <td>{{hours.note}}</td>
+          <td>{{hours.companyName}}</td>
+          <td>{{hours.employeeName}}</td>
+          <td>{{hours.projectName}}</td>
+          <td>
+            <a href="#" [routerLink]="['/update-hours', hours.id]" class="btn btn-primary">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" />
+              </svg>
+            </a>
+            <button type="button" (click)="DeleteRegistration(hours.id)" class="btn btn-danger">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
+              </svg>
+            </button>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+
+</div>
