--- a/Bogholderen/src/app/nav-menu/nav-menu.component.html
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.html
@@ -18,7 +18,7 @@
       <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end"
            [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item"
+          <li class="hide"
               [routerLinkActive]="['link-active']"
               [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">
