--- a/Bogholderen/src/app/nav-menu/nav-menu.component.html
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.html
@@ -68,8 +68,8 @@
           </li>
         </ul>
 
-        <button (click)="useLanguage('en')">EN</button>
-        <button (click)="useLanguage('da')">DA</button>
+        <button (click)="useLanguage('en')" title="{{ 'shared.english' | translate}}">EN</button>
+        <button (click)="useLanguage('da')" title="{{ 'shared.danish' | translate}}">DA</button>
       </div>
     </div>
   </nav>
