--- a/Bogholderen/src/app/hours/update-hours.component.html
+++ b/Bogholderen/src/app/hours/update-hours.component.html
@@ -6,8 +6,17 @@
           <label for="HoursToRegistrate">{{ 'hours.hourstoregistrate' | translate}}</label>
           <input id="HoursToRegistrate" type="text" formControlName="HoursToRegistrate" class="form-control" placeholder="{{ 'projects.hourstoregistrate' | translate}}">
           <div *ngIf="hoursToRegistrate?.invalid && (hoursToRegistrate?.dirty || hoursToRegistrate?.touched)" class="alert alert-danger">
-            <div *ngIf="hoursToRegistrate?.errors">
+            <div *ngIf="hoursToRegistrate?.errors?.errors?.['required']">
               {{ 'hours.hourstoregistrate' | translate}} {{ 'shared.required' | translate}}
+            </div>
+            <div *ngIf="hoursToRegistrate?.errors?.['minlength']">
+              {{ 'hours.registrationlength' | translate}}
+            </div>
+            <div *ngIf="hoursToRegistrate?.errors?.['maxlength']">
+              {{ 'hours.registrationlengthmax' | translate}}
+            </div>
+            <div *ngIf="hoursToRegistrate?.errors?.['pattern']">
+              {{ 'users.onlynumbers' | translate}}
             </div>
           </div>
         </div>
@@ -29,8 +38,14 @@
           <textarea id="Note" type="text" formControlName="Note" class="form-control" rows="4" cols="50" placeholder="{{ 'projects.note' | translate}}">
           </textarea>
           <div *ngIf="note?.invalid && (note?.dirty || note?.touched)" class="alert alert-danger">
-            <div *ngIf="note?.errors">
+            <div *ngIf="note?.errors?.['required']">
               {{ 'projects.note' | translate}} {{ 'shared.required' | translate}}
+            </div>
+            <div *ngIf="note?.errors?.['minlength']">
+              {{ 'hours.notelength' | translate}}
+            </div>
+            <div *ngIf="note?.errors?.['maxlength']">
+              {{ 'hours.notelengthmax' | translate}}
             </div>
           </div>
         </div>
