--- a/Bogholderen/src/app/nav-menu/nav-menu.component.css
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.css
@@ -37,6 +37,27 @@ button {
     box-shadow: 0 5px #666;
     transform: translateY(4px);
   }
+.logoutbutton {
+  font-size: 10px;
+  padding: 3px 8px;
+  border-radius: 12px;
+  background-color: white;
+  color: black;
+  border: 2px solid #D10000;
+  transition-duration: 0.4s;
+}
+
+  .logoutbutton:hover {
+    background-color: #D10000;
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+  .logoutbutton:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 .hide {
   display: none;
 }
