--- a/Bogholderen/src/app/nav-menu/nav-menu.component.html
+++ b/Bogholderen/src/app/nav-menu/nav-menu.component.html
@@ -70,6 +70,7 @@
 
         <button (click)="useLanguage('en')" title="{{ 'shared.english' | translate}}">EN</button>
         <button (click)="useLanguage('da')" title="{{ 'shared.danish' | translate}}">DA</button>
+        <button class="logoutbutton" (click)="logOut()" title="{{ 'shared.logout' | translate}}"> {{ 'shared.logout' | translate }}</button>
       </div>
     </div>
   </nav>
