--- a/Bogholderen/src/app/customers/update-customers.component.html
+++ b/Bogholderen/src/app/customers/update-customers.component.html
@@ -3,7 +3,7 @@
     <div>
       <div class="d-flex flex-row">
         <div class="p-2 col-md-2">
-          <label for="CompanyName">{{ 'users.firstname' | translate}}</label>
+          <label for="CompanyName">{{ 'customers.companyname' | translate}}</label>
           <input id="CompanyName" type="text" formControlName="CompanyName" class="form-control" placeholder="{{ 'customers.companyname' | translate}}">
           <div *ngIf="companyName?.invalid && (companyName?.dirty || companyName?.touched)" class="alert alert-danger">
             <div *ngIf="companyName?.errors">
@@ -13,7 +13,7 @@
         </div>
 
         <div class="p-2 col-md-2">
-          <label for="WebsiteUrl">{{ 'users.lastname' | translate}}</label>
+          <label for="WebsiteUrl">{{ 'customers.websiteurl' | translate}}</label>
           <input id="WebsiteUrl" type="text" formControlName="WebsiteUrl" class="form-control" placeholder="{{ 'customers.websiteurl' | translate}}">
           <div *ngIf="websiteUrl?.invalid && (websiteUrl?.dirty || websiteUrl?.touched)" class="alert alert-danger">
             <div *ngIf="websiteUrl?.errors">
